changed Dockerfile